# rules_js_example

./: BUILD.bazel  MODULE.bazel  bazel-bin  bazel-out  bazel-rules_js_example  bazel-testlogs  package.json  pnpm-lock.yaml  require_mocha.js  test.js  test_one.js  test_two.js
