load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_run_binary", "js_test")
load("@npm//:defs.bzl", "npm_link_all_packages")


npm_link_all_packages(name = "node_modules")

js_binary(
    name = "bin",
    # Reference the location where the acorn npm module was linked in the root Bazel package
    data = ["//:node_modules/mocha"],
    entry_point = "require_mocha.js",
)

js_test(
    name = "test_one",
    data = [
        "//:node_modules/mocha",
        ":test_one.js"
    ],
    entry_point = "test.js",
)
